# e_calc

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  e_calc.pc.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lib/: Makefile.am  Makefile.in  butterworth.c  butterworth.h  capacitor.c  capacitor.h  chebyshev.c  chebyshev.h  constant_k.c  current.c  current.h  decibel.c  decibel.h  diplexer.c  distance.c  distance.h  dividers.h  frequency.c  frequency.h  highpass.h  inductor.c  inductor.h  io.c  io.h  l_network.c  l_network.h  lowpass.h  magloop.c  magloop.h  magloopold.c  match_network.c  match_network.h  ohmslaw.h  permeability.h  power.c  power.h  q.h  reactance.h  resister.c  resister.h  (+11 more)
lib/coupled_res/: but.c  cheb.c
src/: Makefile.am  Makefile.in  butterworth.c  butterworth.h  capacitor.c  capacitor.h  chebyshev.c  chebyshev.h  e_calc.c  inductor.c  inductor.h  l_network.c  l_network.h  magloop.c  magloop.h  match_network.c  match_network.h  ohmslaw.c  ohmslaw.h  reactance.c  reactance.h  resister.c  resister.h  smith.c  smith.h  snr.c  snr.h  tank.c  tank.h
